<?xml version="1.0"?>
<package>
  <name>husky_teleop</name>
  <version>0.0.2</version>
  <description>
    Basic node for transforming joystick messages to cmd_vel for Husky.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>

  <export>
  </export>
</package>
